<resources>
    <string name="app_name">College Scheduler App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_course_list">Courses</string>
    <string name="to_do_list">To-Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_home_info">
        In this app, you will be able to:\n
            - Input details about your classes.\n
            - Input details about your assignments.\n
            - Input details about your exams.\n
            - Create a to-do list for your academic tasks.\n\n
        We hope you find this app as being useful in helping you stay on track during your college journey.
        Happy studying!
    </string>
    <string name="menu_exams" />
    <string name="exams">Exams</string>
    <string name="assignments">Assignments</string>

    <string name="view">View</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
</resources>