<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.collegeschedulerapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.collegeschedulerapp.ui.courses.CourseFragment"
        android:label="@string/menu_course_list"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.collegeschedulerapp.ui.todolist.ToDoListFragment"
        android:label="@string/to_do_list"
        tools:layout="@layout/fragment_to_do_list" />

    <fragment
        android:id="@+id/nav_exams"
        android:name="com.example.collegeschedulerapp.ui.exam.ExamFragment"
        android:label="@string/exams"
        tools:layout="@layout/fragment_to_do_list" />
    <fragment
        android:id="@+id/nav_assignments"
        android:name="com.example.collegeschedulerapp.ui.assignments.AssignmentsFragment"
        android:label="@string/assignments"
        tools:layout="@layout/fragment_assignments" />

</navigation>