<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.collegeschedulerapp.ui.exam.ExamFragment">


    <EditText
        android:layout_marginTop="100dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="Class + Exam Name" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etLastName"
        android:layout_below="@+id/etFirstName"
        android:layout_centerHorizontal="true"
        android:hint="Location"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etFavFood"
        android:layout_below="@+id/etLastName"
        android:layout_centerHorizontal="true"
        android:hint="Date + Time"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFavFood"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="#50624F"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:cornerRadius="90dp" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFavFood"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="#50624F"
        android:text="@string/view"
        android:textColor="#FFFFFF"
        app:cornerRadius="90dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="142dp"
        android:backgroundTint="#50624F"
        android:text="@string/reset"
        android:textColor="#FDFCFC"
        app:cornerRadius="90dp" />
</RelativeLayout>